[gd_scene load_steps=37 format=3 uid="uid://dxftr7at571rb"]

[ext_resource type="Script" path="res://Utility/Worlds/medieval_world.gd" id="1_ymiyk"]
[ext_resource type="Texture2D" uid="uid://8fsr518e0xvh" path="res://Texture/Wall.png" id="2_o3gq3"]
[ext_resource type="Texture2D" uid="uid://cmf3cfh77aqr2" path="res://Texture/office.webp" id="2_yhiln"]
[ext_resource type="Texture2D" uid="uid://due55xagumt4c" path="res://Texture/blbobolbolbob.webp" id="4_flvrg"]
[ext_resource type="PackedScene" uid="uid://cd08rjf45ahrc" path="res://Utility/player/player.tscn" id="5_akvvl"]
[ext_resource type="Script" path="res://Utility/Menu/to_fish_land.gd" id="5_jmfyj"]
[ext_resource type="Script" path="res://Utility/player/player.gd" id="6_jjr2k"]
[ext_resource type="Texture2D" uid="uid://jnn2kvjs2m70" path="res://Texture/HpBar.png" id="7_5xrn0"]
[ext_resource type="Script" path="res://Utility/Menu/to_knight_land.gd" id="7_qkt5r"]
[ext_resource type="Texture2D" uid="uid://cxbxi5l5a2841" path="res://Texture/HpBarProgress.png" id="8_ghddb"]
[ext_resource type="Texture2D" uid="uid://df6otberishf5" path="res://Texture/ShieldBar-export.png" id="9_m8rjk"]
[ext_resource type="Texture2D" uid="uid://b8h85epj3xogm" path="res://Texture/shieldBarProgress.png" id="10_btko8"]
[ext_resource type="Texture2D" uid="uid://dcc63xi8kndum" path="res://Texture/HitAnim.png" id="11_13lkq"]
[ext_resource type="Texture2D" uid="uid://rjmrknxqlt77" path="res://Texture/small_sting-Sheet.png" id="12_1ebtg"]
[ext_resource type="Texture2D" uid="uid://ijq7ng2d01ma" path="res://Texture/knight.png" id="14_t814u"]
[ext_resource type="Script" path="res://Utility/Enemy/enemyClose - water.gd" id="16_a6qy4"]
[ext_resource type="PackedScene" uid="uid://cq1a2utcib7oo" path="res://Utility/Menu/hand_interface.tscn" id="17_vkikb"]
[ext_resource type="Texture2D" uid="uid://ga8w5fstohgn" path="res://Texture/grlmrglbrlmbrm.webp" id="17_vu850"]
[ext_resource type="Script" path="res://Utility/Enemy/enemyMiddle - water.gd" id="18_brqjj"]
[ext_resource type="PackedScene" uid="uid://5egfsf5cs0r4" path="res://Utility/player/library.tscn" id="18_kg3x8"]
[ext_resource type="AudioStream" uid="uid://b2gf6y1e2j5qq" path="res://Audio/mini_adventure_overworld.mp3" id="19_4thax"]
[ext_resource type="Texture2D" uid="uid://wp1h7k48xdvq" path="res://Texture/mlemmlem.webp" id="19_ejhlc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v5nh2"]
atlas = ExtResource("11_13lkq")
region = Rect2(0, 0, 26, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_8emrg"]
atlas = ExtResource("11_13lkq")
region = Rect2(26, 0, 26, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gi5g"]
atlas = ExtResource("11_13lkq")
region = Rect2(52, 0, 26, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuagu"]
atlas = ExtResource("11_13lkq")
region = Rect2(78, 0, 26, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_12pyw"]
atlas = ExtResource("11_13lkq")
region = Rect2(104, 0, 26, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_488y5"]
atlas = ExtResource("11_13lkq")
region = Rect2(130, 0, 26, 53)

[sub_resource type="SpriteFrames" id="SpriteFrames_wo4ic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5nh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8emrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gi5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuagu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12pyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_488y5")
}],
"loop": false,
"name": &"impact",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_upd36"]
atlas = ExtResource("12_1ebtg")
region = Rect2(0, 0, 88, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_71bj3"]
atlas = ExtResource("12_1ebtg")
region = Rect2(88, 0, 88, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv4ex"]
atlas = ExtResource("12_1ebtg")
region = Rect2(176, 0, 88, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6577"]
atlas = ExtResource("12_1ebtg")
region = Rect2(264, 0, 88, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltt4w"]
atlas = ExtResource("12_1ebtg")
region = Rect2(352, 0, 88, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_2euwj"]
atlas = ExtResource("12_1ebtg")
region = Rect2(440, 0, 88, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_8bo6t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_upd36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71bj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv4ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6577")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltt4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2euwj")
}],
"loop": false,
"name": &"Arrow",
"speed": 5.0
}]

[node name="OfficeWorld" type="Node2D"]
script = ExtResource("1_ymiyk")

[node name="ColorRect" type="TextureRect" parent="."]
visible = false
offset_left = -2.0
offset_top = 114.0
offset_right = 1148.0
offset_bottom = 645.0
texture = ExtResource("2_o3gq3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 310)

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(570, 300)
scale = Vector2(2.06223, 1.59205)
texture = ExtResource("2_yhiln")

[node name="to_fish_land" type="Button" parent="BackGround"]
offset_left = 177.478
offset_top = -55.2746
offset_right = 245.478
offset_bottom = 12.7254
rotation = 3.14159
scale = Vector2(0.714705, -0.361838)
icon = ExtResource("4_flvrg")
flat = true
script = ExtResource("5_jmfyj")

[node name="to_knight_land" type="Button" parent="BackGround"]
offset_left = -51.8855
offset_top = -55.9027
offset_right = -43.8855
offset_bottom = -47.9027
scale = Vector2(0.668204, 0.384991)
icon = ExtResource("14_t814u")
flat = true
script = ExtResource("7_qkt5r")

[node name="Player" parent="." instance=ExtResource("5_akvvl")]
position = Vector2(358, 391)
script = ExtResource("6_jjr2k")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Player"]
visible = false
offset_left = -58.0
offset_top = -179.0
offset_right = 6.0
offset_bottom = -115.0
scale = Vector2(2, 2)
max_value = 40.0
texture_over = ExtResource("7_5xrn0")
texture_progress = ExtResource("8_ghddb")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="Player"]
visible = false
offset_left = -59.0
offset_top = -203.0
offset_right = 5.0
offset_bottom = -139.0
scale = Vector2(2, 2)
max_value = 20.0
texture_over = ExtResource("9_m8rjk")
texture_progress = ExtResource("10_btko8")

[node name="ImpactAnim" type="AnimatedSprite2D" parent="Player"]
unique_name_in_owner = true
position = Vector2(2, -8.00001)
rotation = 3.14159
scale = Vector2(1.92468, 1.66041)
sprite_frames = SubResource("SpriteFrames_wo4ic")
animation = &"impact"
frame = 5
frame_progress = 1.0

[node name="ArrowAnim" type="AnimatedSprite2D" parent="Player"]
unique_name_in_owner = true
position = Vector2(30, 2)
rotation = -3.14159
sprite_frames = SubResource("SpriteFrames_8bo6t")
animation = &"Arrow"
frame = 5
frame_progress = 1.0

[node name="enemyClose" type="Node2D" parent="."]
visible = false
script = ExtResource("16_a6qy4")

[node name="Sprite2D" type="Sprite2D" parent="enemyClose"]
position = Vector2(647, 381)
scale = Vector2(3.27344, 2.94531)
texture = ExtResource("17_vu850")

[node name="TextureProgressBar" type="TextureProgressBar" parent="enemyClose"]
offset_left = 578.0
offset_top = 226.0
offset_right = 642.0
offset_bottom = 290.0
scale = Vector2(2, 2)
max_value = 40.0
texture_over = ExtResource("7_5xrn0")
texture_progress = ExtResource("8_ghddb")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="enemyClose"]
offset_left = 577.0
offset_top = 195.0
offset_right = 641.0
offset_bottom = 259.0
scale = Vector2(2, 2)
max_value = 40.0
texture_over = ExtResource("9_m8rjk")
texture_progress = ExtResource("10_btko8")

[node name="enemyMiddle" type="Node2D" parent="."]
visible = false
position = Vector2(-4, -93)
script = ExtResource("18_brqjj")

[node name="Sprite2D" type="Sprite2D" parent="enemyMiddle"]
position = Vector2(770, 480)
scale = Vector2(2.71875, 2.47656)
texture = ExtResource("19_ejhlc")

[node name="TextureProgressBar" type="TextureProgressBar" parent="enemyMiddle"]
offset_left = 712.0
offset_top = 319.0
offset_right = 776.0
offset_bottom = 383.0
scale = Vector2(2, 2)
max_value = 15.0
texture_over = ExtResource("7_5xrn0")
texture_progress = ExtResource("8_ghddb")

[node name="enemyFar" type="Node2D" parent="."]
visible = false
position = Vector2(-315, 244)

[node name="Sprite2D" type="Sprite2D" parent="enemyFar"]
position = Vector2(315, -244)

[node name="GUI" type="CanvasLayer" parent="."]
visible = false

[node name="HandInterface" parent="GUI" instance=ExtResource("17_vkikb")]
offset_left = 46.0
offset_top = -153.0
offset_right = -28.0
offset_bottom = 79.0

[node name="Library" parent="." instance=ExtResource("18_kg3x8")]
unique_name_in_owner = true
position = Vector2(-249, -256)
scale = Vector2(2.17444, 1.73306)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_4thax")
volume_db = -3.714
autoplay = true

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
